<?xml version="1.0" encoding="utf-8"?>
<layout     xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >
    <data>
        <variable
            name="nameInput"
            type="String" />
        <variable
            name="initialText"
            type="String" />
        <variable
            name="editText"
            type="String" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">


        <ImageView
            android:id="@+id/imageGuate"
            android:layout_width="409dp"
            android:layout_height="137dp"
            android:src="@drawable/guatemala"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nameText"
            style="@style/SubtitleStyle"
            android:text="@{initialText}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/nameInsert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@{editText}"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/nameText"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <Button
            android:id="@+id/starButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="20dp"
            android:background="@android:drawable/presence_online"
            android:onClick="showName"
            app:layout_constraintBottom_toTopOf="@+id/nameInsert"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/nameShown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{nameInput}"
            app:layout_constraintBottom_toBottomOf="@+id/nameInsert"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/nameInsert" />

        <TextView
            android:id="@+id/textView"
            style="@style/TitleStyle"
            android:fontFamily="@font/roboto"
            android:text="@string/title_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageGuate" />

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="350dp"
            android:layout_height="300dp"
            android:layout_marginTop="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameInsert">

            <TextView
                style="@style/TextStyle"
                android:text="@string/info_guate" />
        </ScrollView>

        <Button
            android:id="@+id/tikal"
            style="@style/ButtonStyle"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:onClick="changeTikal"
            android:text="@string/change_one"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/atitlan"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

        <Button
            android:id="@+id/atitlan"
            style="buttonSty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:onClick="changeAtitlan"
            android:text="@string/change_two"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

        <Button
            android:id="@+id/izabal"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            android:onClick="changeIzabal"
            android:text="@string/change_three"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/atitlan"
            app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>